# saladbox

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.py  config.yaml  plan.md  pyproject.toml  release.py  setup.sh  test_browser.py  test_playwright.py
.github/workflows/: release.yml
electron/: README.md  banner.js  dashboard.css  dashboard.html  dashboard.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  setup.js  styles.css
electron/assets/: icon.icns
saladbox/: README.md  __init__.py  __main__.py  app.py  config.py  setup_wizard.py
saladbox/adapters/: README.md  base.py  cli.py  http.py  slack.py  telegram.py
saladbox/core/: README.md  __init__.py  chat_store.py  engine.py  llm.py  mcp_client.py  memory.py  skills.py  tool_filter.py  tool_registry.py  types.py  whisper_service.py
saladbox/platform/: README.md  __init__.py  http.py  output.py  parsing.py
saladbox/tools/: README.md  __init__.py  base.py  browser.py  calculator.py  clipboard.py  code_editor.py  color.py  datetime_tool.py  docker.py  encoding.py  file_search.py  filesystem.py  finance.py  git.py  http_client.py  image_gen.py  json_yaml.py  local_db.py  location.py  network.py  notes.py  open_url.py  password.py  process_manager.py  python_exec.py  qrcode_tool.py  reminder.py  scheduler.py  screen_capture.py  shell.py  system_control.py  system_monitor.py  text.py  timer.py  translate.py  unit_converter.py  url.py  weather.py  web_search.py
skills/: analyze.yaml  code_review.yaml  convert.yaml  crypto.yaml  debug.yaml  deploy.yaml  docker.yaml  explain.yaml  notes.yaml  opencode.yaml  password.yaml  refactor.yaml  search.yaml  summarize.yaml  test.yaml  time.yaml  weather.yaml
tests/: test_tool_calling.py  test_tool_calling_simple.py
tests/test_tools/: test_file_search.py  test_new_features.py
